# axum-yew-template

./: .gitignore  README.md
client/: Cargo.toml  Trunk.toml  index.html
client/src/: main.rs
rest/: hello.rest
server/: Cargo.toml
server/src/: api.rs  main.rs
